--- a/tag-graph/tag-graph.css
+++ b/tag-graph/tag-graph.css
@@ -4,8 +4,10 @@ tag-graph {
   width: 500px;
   height: 500px;
   overflow: hidden;
+
+  font-family: verdana;
 }
-tag-graph > *,
+tag-graph-node,
 tag-graph-tag {
   display: inline-block;
   max-width: 100px;
@@ -17,6 +19,14 @@ tag-graph-tag {
   left: 0;
 
   background-color: rgba(255,255,255,0.75);
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 tag-graph tag-graph-edges,
 tag-graph tag-graph-tags {
@@ -38,16 +48,22 @@ tag-graph tag-graph-tags {
   left: 0;
 }
 
-hash-tag {
-  background-color: rgba(255,255,0,0.25);
+tag-graph-node {
+  font-size: 11px;
+}
+tag-graph-node a {
+  background-color: hsl(60,100%,95%);
+  color: black;
+  text-decoration: none;
 }
 tag-graph-tag {
-  background-color: rgba(255,255,0,0.5);
+  background-color: hsl(60,100%,80%);
+  font-size: 10px;
 }
 
 /* SVG styles */
 .link {
-  stroke: black;
+  stroke: gray;
 }
 .node {
   fill: rgb(255,255,0);
